--- a/board/aw-ol/d1/d1-linux.config
+++ b/board/aw-ol/d1/d1-linux.config
@@ -2739,9 +2739,11 @@ CONFIG_HID_MULTITOUCH=m
 #
 # USB HID support
 #
-CONFIG_USB_HID=y
-CONFIG_HID_PID=y
-CONFIG_USB_HIDDEV=y
+#CONFIG_USB_HID=y
+#CONFIG_HID_PID=y
+CONFIG_USB_KBD=y
+CONFIG_USB_MOUSE=y
+#CONFIG_USB_HIDDEV=y
 # end of USB HID support
 
 #
