--- a/d1-buildroot.config
+++ b/d1-buildroot.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2022.05 Configuration
+# Buildroot -g6aa72361-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -354,10 +354,10 @@ BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://gitee.com/weidongshan/NezaD1-linuxkern
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="origin/master"
 BR2_LINUX_KERNEL_VERSION="origin/master"
 BR2_LINUX_KERNEL_PATCH=""
-BR2_LINUX_KERNEL_USE_DEFCONFIG=y
+# BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
 # BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
-# BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
-BR2_LINUX_KERNEL_DEFCONFIG="sun20iw1p1_d1"
+BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/aw-ol/d1/d1-linux.config"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES=""
 BR2_LINUX_KERNEL_CUSTOM_LOGO_PATH=""
 BR2_LINUX_KERNEL_IMAGE=y
@@ -1040,18 +1040,27 @@ BR2_PACKAGE_NFS_UTILS_RPC_NFSD=y
 #
 # BR2_PACKAGE_BITSTREAM_VERA is not set
 # BR2_PACKAGE_CANTARELL is not set
-# BR2_PACKAGE_DEJAVU is not set
+BR2_PACKAGE_DEJAVU=y
+BR2_PACKAGE_DEJAVU_MONO=y
+BR2_PACKAGE_DEJAVU_SANS=y
+BR2_PACKAGE_DEJAVU_SERIF=y
+BR2_PACKAGE_DEJAVU_SANS_CONDENSED=y
+BR2_PACKAGE_DEJAVU_SERIF_CONDENSED=y
 BR2_PACKAGE_FONT_AWESOME=y
 # BR2_PACKAGE_GHOSTSCRIPT_FONTS is not set
 # BR2_PACKAGE_INCONSOLATA is not set
-# BR2_PACKAGE_LIBERATION is not set
+BR2_PACKAGE_LIBERATION=y
+BR2_PACKAGE_LIBERATION_MONO=y
+BR2_PACKAGE_LIBERATION_SANS=y
+BR2_PACKAGE_LIBERATION_SERIF=y
 # BR2_PACKAGE_WQY_ZENHEI is not set
 
 #
 # Icons
 #
+# BR2_PACKAGE_ADWAITA_ICON_THEME is not set
 # BR2_PACKAGE_GOOGLE_MATERIAL_DESIGN_ICONS is not set
-# BR2_PACKAGE_HICOLOR_ICON_THEME is not set
+BR2_PACKAGE_HICOLOR_ICON_THEME=y
 
 #
 # Sounds
@@ -1062,6 +1071,7 @@ BR2_PACKAGE_FONT_AWESOME=y
 #
 # Themes
 #
+BR2_PACKAGE_GTK2_ENGINES=y
 
 #
 # Games
@@ -1215,52 +1225,60 @@ BR2_PACKAGE_XORG7=y
 #
 # X11R7 Servers
 #
-# BR2_PACKAGE_XSERVER_XORG_SERVER is not set
+BR2_PACKAGE_XSERVER_XORG_SERVER=y
+BR2_PACKAGE_XSERVER_XORG_SERVER_MODULAR=y
+# BR2_PACKAGE_XSERVER_XORG_SERVER_KDRIVE is not set
+
+#
+# Optional Servers
+#
+BR2_PACKAGE_XSERVER_XORG_SERVER_XVFB=y
+# BR2_PACKAGE_XSERVER_XORG_SERVER_XEPHYR is not set
 
 #
 # X11R7 Libraries
 #
 BR2_PACKAGE_LIBXCB=y
-# BR2_PACKAGE_XCB_UTIL is not set
+BR2_PACKAGE_XCB_UTIL=y
 # BR2_PACKAGE_XCB_UTIL_CURSOR is not set
 # BR2_PACKAGE_XCB_UTIL_IMAGE is not set
 # BR2_PACKAGE_XCB_UTIL_KEYSYMS is not set
 # BR2_PACKAGE_XCB_UTIL_RENDERUTIL is not set
 # BR2_PACKAGE_XCB_UTIL_WM is not set
-# BR2_PACKAGE_XLIB_LIBFS is not set
+BR2_PACKAGE_XLIB_LIBFS=y
 BR2_PACKAGE_XLIB_LIBICE=y
 BR2_PACKAGE_XLIB_LIBSM=y
 BR2_PACKAGE_XLIB_LIBX11=y
 # BR2_PACKAGE_XLIB_LIBXSCRNSAVER is not set
 BR2_PACKAGE_XLIB_LIBXAU=y
 BR2_PACKAGE_XLIB_LIBXAW=y
-# BR2_PACKAGE_XLIB_LIBXCOMPOSITE is not set
-# BR2_PACKAGE_XLIB_LIBXCURSOR is not set
-# BR2_PACKAGE_XLIB_LIBXDAMAGE is not set
+BR2_PACKAGE_XLIB_LIBXCOMPOSITE=y
+BR2_PACKAGE_XLIB_LIBXCURSOR=y
+BR2_PACKAGE_XLIB_LIBXDAMAGE=y
 BR2_PACKAGE_XLIB_LIBXDMCP=y
 BR2_PACKAGE_XLIB_LIBXEXT=y
 BR2_PACKAGE_XLIB_LIBXFIXES=y
-# BR2_PACKAGE_XLIB_LIBXFONT is not set
-# BR2_PACKAGE_XLIB_LIBXFONT2 is not set
-# BR2_PACKAGE_XLIB_LIBXFT is not set
+BR2_PACKAGE_XLIB_LIBXFONT=y
+BR2_PACKAGE_XLIB_LIBXFONT2=y
+BR2_PACKAGE_XLIB_LIBXFT=y
 BR2_PACKAGE_XLIB_LIBXI=y
-# BR2_PACKAGE_XLIB_LIBXINERAMA is not set
+BR2_PACKAGE_XLIB_LIBXINERAMA=y
 BR2_PACKAGE_XLIB_LIBXMU=y
 BR2_PACKAGE_XLIB_LIBXPM=y
-# BR2_PACKAGE_XLIB_LIBXRANDR is not set
-# BR2_PACKAGE_XLIB_LIBXRENDER is not set
-# BR2_PACKAGE_XLIB_LIBXRES is not set
+BR2_PACKAGE_XLIB_LIBXRANDR=y
+BR2_PACKAGE_XLIB_LIBXRENDER=y
+BR2_PACKAGE_XLIB_LIBXRES=y
 BR2_PACKAGE_XLIB_LIBXT=y
 BR2_PACKAGE_XLIB_LIBXTST=y
 BR2_PACKAGE_XLIB_LIBXV=y
-# BR2_PACKAGE_XLIB_LIBXVMC is not set
-# BR2_PACKAGE_XLIB_LIBXXF86DGA is not set
-# BR2_PACKAGE_XLIB_LIBXXF86VM is not set
-# BR2_PACKAGE_XLIB_LIBDMX is not set
-# BR2_PACKAGE_XLIB_LIBFONTENC is not set
-# BR2_PACKAGE_XLIB_LIBXCVT is not set
-# BR2_PACKAGE_XLIB_LIBXKBFILE is not set
-# BR2_PACKAGE_XLIB_LIBXSHMFENCE is not set
+BR2_PACKAGE_XLIB_LIBXVMC=y
+BR2_PACKAGE_XLIB_LIBXXF86DGA=y
+BR2_PACKAGE_XLIB_LIBXXF86VM=y
+BR2_PACKAGE_XLIB_LIBDMX=y
+BR2_PACKAGE_XLIB_LIBFONTENC=y
+BR2_PACKAGE_XLIB_LIBXCVT=y
+BR2_PACKAGE_XLIB_LIBXKBFILE=y
+BR2_PACKAGE_XLIB_LIBXSHMFENCE=y
 BR2_PACKAGE_XLIB_XTRANS=y
 
 #
@@ -1283,25 +1301,26 @@ BR2_PACKAGE_XLIB_XTRANS=y
 # BR2_PACKAGE_XAPP_RGB is not set
 # BR2_PACKAGE_XAPP_RSTART is not set
 # BR2_PACKAGE_XAPP_SCRIPTS is not set
-# BR2_PACKAGE_XAPP_SESSREG is not set
+BR2_PACKAGE_XAPP_SESSREG=y
 # BR2_PACKAGE_XAPP_SETXKBMAP is not set
 # BR2_PACKAGE_XAPP_SHOWFONT is not set
 # BR2_PACKAGE_XAPP_SMPROXY is not set
-# BR2_PACKAGE_XAPP_TWM is not set
+BR2_PACKAGE_XAPP_TWM=y
 # BR2_PACKAGE_XAPP_VIEWRES is not set
-# BR2_PACKAGE_XAPP_X11PERF is not set
-# BR2_PACKAGE_XAPP_XAUTH is not set
+BR2_PACKAGE_XAPP_X11PERF=y
+BR2_PACKAGE_XAPP_XAUTH=y
 # BR2_PACKAGE_XAPP_XBACKLIGHT is not set
 # BR2_PACKAGE_XAPP_XBIFF is not set
 # BR2_PACKAGE_XAPP_XCALC is not set
 # BR2_PACKAGE_XAPP_XCLIPBOARD is not set
-# BR2_PACKAGE_XAPP_XCLOCK is not set
+BR2_PACKAGE_XAPP_XCLOCK=y
 # BR2_PACKAGE_XAPP_XCMSDB is not set
 # BR2_PACKAGE_XAPP_XCOMPMGR is not set
-# BR2_PACKAGE_XAPP_XCONSOLE is not set
+BR2_PACKAGE_XAPP_XCONSOLE=y
 # BR2_PACKAGE_XAPP_XCURSORGEN is not set
 # BR2_PACKAGE_XAPP_XDBEDIZZY is not set
 # BR2_PACKAGE_XAPP_XDITVIEW is not set
+BR2_PACKAGE_XAPP_XDM=y
 # BR2_PACKAGE_XAPP_XDPYINFO is not set
 
 #
@@ -1309,7 +1328,7 @@ BR2_PACKAGE_XLIB_XTRANS=y
 #
 # BR2_PACKAGE_XAPP_XEDIT is not set
 # BR2_PACKAGE_XAPP_XEV is not set
-# BR2_PACKAGE_XAPP_XEYES is not set
+BR2_PACKAGE_XAPP_XEYES=y
 # BR2_PACKAGE_XAPP_XF86DGA is not set
 # BR2_PACKAGE_XAPP_XFD is not set
 # BR2_PACKAGE_XAPP_XFINDPROXY is not set
@@ -1318,16 +1337,17 @@ BR2_PACKAGE_XLIB_XTRANS=y
 # BR2_PACKAGE_XAPP_XFSINFO is not set
 # BR2_PACKAGE_XAPP_XGAMMA is not set
 # BR2_PACKAGE_XAPP_XGC is not set
-# BR2_PACKAGE_XAPP_XHOST is not set
+BR2_PACKAGE_XAPP_XHOST=y
+BR2_PACKAGE_XAPP_XINIT=y
 # BR2_PACKAGE_XAPP_XINPUT is not set
 # BR2_PACKAGE_XAPP_XINPUT_CALIBRATOR is not set
-# BR2_PACKAGE_XAPP_XKBCOMP is not set
+BR2_PACKAGE_XAPP_XKBCOMP=y
 # BR2_PACKAGE_XAPP_XKBEVD is not set
 # BR2_PACKAGE_XAPP_XKBPRINT is not set
 # BR2_PACKAGE_XAPP_XKBUTILS is not set
 # BR2_PACKAGE_XAPP_XKILL is not set
-# BR2_PACKAGE_XAPP_XLOAD is not set
-# BR2_PACKAGE_XAPP_XLOGO is not set
+BR2_PACKAGE_XAPP_XLOAD=y
+BR2_PACKAGE_XAPP_XLOGO=y
 # BR2_PACKAGE_XAPP_XLSATOMS is not set
 # BR2_PACKAGE_XAPP_XLSCLIENTS is not set
 # BR2_PACKAGE_XAPP_XLSFONTS is not set
@@ -1339,10 +1359,10 @@ BR2_PACKAGE_XLIB_XTRANS=y
 # BR2_PACKAGE_XAPP_XMORE is not set
 # BR2_PACKAGE_XAPP_XPR is not set
 # BR2_PACKAGE_XAPP_XPROP is not set
-# BR2_PACKAGE_XAPP_XRANDR is not set
-# BR2_PACKAGE_XAPP_XRDB is not set
+BR2_PACKAGE_XAPP_XRANDR=y
+BR2_PACKAGE_XAPP_XRDB=y
 # BR2_PACKAGE_XAPP_XREFRESH is not set
-# BR2_PACKAGE_XAPP_XSET is not set
+BR2_PACKAGE_XAPP_XSET=y
 # BR2_PACKAGE_XAPP_XSETMODE is not set
 # BR2_PACKAGE_XAPP_XSETPOINTER is not set
 # BR2_PACKAGE_XAPP_XSETROOT is not set
@@ -1355,16 +1375,79 @@ BR2_PACKAGE_XLIB_XTRANS=y
 # BR2_PACKAGE_XAPP_XWUD is not set
 
 #
+# X11R7 Drivers
+#
+BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
+BR2_PACKAGE_XDRIVER_XF86_INPUT_JOYSTICK=y
+BR2_PACKAGE_XDRIVER_XF86_INPUT_KEYBOARD=y
+BR2_PACKAGE_XDRIVER_XF86_INPUT_LIBINPUT=y
+BR2_PACKAGE_XDRIVER_XF86_INPUT_MOUSE=y
+# BR2_PACKAGE_XDRIVER_XF86_INPUT_SYNAPTICS is not set
+# BR2_PACKAGE_XDRIVER_XF86_INPUT_TSLIB is not set
+
+#
+# xf86-video-amdgpu needs egl/opengl support from mesa3d
+#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_ARK is not set
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_AST is not set
+BR2_PACKAGE_XDRIVER_XF86_VIDEO_CIRRUS=y
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_DUMMY is not set
+BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBDEV=y
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBTURBO is not set
+
+#
+# xf86-video-glint needs mesa3d
+#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_I128 is not set
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_MACH64 is not set
+
+#
+# xf86-video-mga needs mesa3d
+#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_NEOMAGIC is not set
+
+#
+# xf86-video-nouveau needs mesa3d
+#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_NV is not set
+
+#
+# xf86-video-openchrome needs a DRI driver from mesa3d
+#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_R128 is not set
+
+#
+# xf86-video-savage needs mesa3d
+#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_SILICONMOTION is not set
+
+#
+# xf86-video-sis needs mesa3d
+#
+
+#
+# xf86-video-tdfx needs mesa3d
+#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_TGA is not set
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_TRIDENT is not set
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_VESA is not set
+
+#
+# xf86-video-vmware needs mesa3d
+#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_VOODOO is not set
+
+#
 # X11R7 Fonts
 #
-# BR2_PACKAGE_XFONT_FONT_UTIL is not set
-# BR2_PACKAGE_XFONT_ENCODINGS is not set
-# BR2_PACKAGE_XFONT_FONT_ADOBE_100DPI is not set
-# BR2_PACKAGE_XFONT_FONT_ADOBE_75DPI is not set
-# BR2_PACKAGE_XFONT_FONT_ADOBE_UTOPIA_100DPI is not set
-# BR2_PACKAGE_XFONT_FONT_ADOBE_UTOPIA_75DPI is not set
-# BR2_PACKAGE_XFONT_FONT_ADOBE_UTOPIA_TYPE1 is not set
-# BR2_PACKAGE_XFONT_FONT_ALIAS is not set
+BR2_PACKAGE_XFONT_FONT_UTIL=y
+BR2_PACKAGE_XFONT_ENCODINGS=y
+BR2_PACKAGE_XFONT_FONT_ADOBE_100DPI=y
+BR2_PACKAGE_XFONT_FONT_ADOBE_75DPI=y
+BR2_PACKAGE_XFONT_FONT_ADOBE_UTOPIA_100DPI=y
+BR2_PACKAGE_XFONT_FONT_ADOBE_UTOPIA_75DPI=y
+BR2_PACKAGE_XFONT_FONT_ADOBE_UTOPIA_TYPE1=y
+BR2_PACKAGE_XFONT_FONT_ALIAS=y
 # BR2_PACKAGE_XFONT_FONT_ARABIC_MISC is not set
 # BR2_PACKAGE_XFONT_FONT_BH_100DPI is not set
 # BR2_PACKAGE_XFONT_FONT_BH_75DPI is not set
@@ -1376,24 +1459,24 @@ BR2_PACKAGE_XLIB_XTRANS=y
 # BR2_PACKAGE_XFONT_FONT_BITSTREAM_75DPI is not set
 # BR2_PACKAGE_XFONT_FONT_BITSTREAM_TYPE1 is not set
 # BR2_PACKAGE_XFONT_FONT_CRONYX_CYRILLIC is not set
-# BR2_PACKAGE_XFONT_FONT_CURSOR_MISC is not set
+BR2_PACKAGE_XFONT_FONT_CURSOR_MISC=y
 # BR2_PACKAGE_XFONT_FONT_DAEWOO_MISC is not set
 # BR2_PACKAGE_XFONT_FONT_DEC_MISC is not set
 # BR2_PACKAGE_XFONT_FONT_IBM_TYPE1 is not set
 # BR2_PACKAGE_XFONT_FONT_ISAS_MISC is not set
 # BR2_PACKAGE_XFONT_FONT_JIS_MISC is not set
-# BR2_PACKAGE_XFONT_FONT_MICRO_MISC is not set
-# BR2_PACKAGE_XFONT_FONT_MISC_CYRILLIC is not set
-# BR2_PACKAGE_XFONT_FONT_MISC_ETHIOPIC is not set
+BR2_PACKAGE_XFONT_FONT_MICRO_MISC=y
+BR2_PACKAGE_XFONT_FONT_MISC_CYRILLIC=y
+BR2_PACKAGE_XFONT_FONT_MISC_ETHIOPIC=y
 # BR2_PACKAGE_XFONT_FONT_MISC_MELTHO is not set
-# BR2_PACKAGE_XFONT_FONT_MISC_MISC is not set
+BR2_PACKAGE_XFONT_FONT_MISC_MISC=y
 # BR2_PACKAGE_XFONT_FONT_MUTT_MISC is not set
 # BR2_PACKAGE_XFONT_FONT_SCHUMACHER_MISC is not set
-# BR2_PACKAGE_XFONT_FONT_SCREEN_CYRILLIC is not set
-# BR2_PACKAGE_XFONT_FONT_SONY_MISC is not set
+BR2_PACKAGE_XFONT_FONT_SCREEN_CYRILLIC=y
+BR2_PACKAGE_XFONT_FONT_SONY_MISC=y
 # BR2_PACKAGE_XFONT_FONT_SUN_MISC is not set
 # BR2_PACKAGE_XFONT_FONT_WINITZKI_CYRILLIC is not set
-# BR2_PACKAGE_XFONT_FONT_XFREE86_TYPE1 is not set
+BR2_PACKAGE_XFONT_FONT_XFREE86_TYPE1=y
 
 #
 # X11R7 X protocols
@@ -1405,12 +1488,12 @@ BR2_PACKAGE_XORGPROTO=y
 # X11R7 Utilities
 #
 # BR2_PACKAGE_XUTIL_MAKEDEPEND is not set
-# BR2_PACKAGE_MCOOKIE is not set
+BR2_PACKAGE_MCOOKIE=y
 
 #
 # X11R7 Other data
 #
-# BR2_PACKAGE_XDATA_XBITMAPS is not set
+BR2_PACKAGE_XDATA_XBITMAPS=y
 # BR2_PACKAGE_XDATA_XCURSOR_THEMES is not set
 # BR2_PACKAGE_XCURSOR_TRANSPARENT_THEME is not set
 
@@ -1422,6 +1505,9 @@ BR2_PACKAGE_XORGPROTO=y
 # BR2_PACKAGE_DILLO is not set
 # BR2_PACKAGE_DOCKER is not set
 # BR2_PACKAGE_FEH is not set
+# BR2_PACKAGE_GMPC is not set
+# BR2_PACKAGE_GTKPERF is not set
+# BR2_PACKAGE_LEAFPAD is not set
 # BR2_PACKAGE_MUPDF is not set
 # BR2_PACKAGE_NODM is not set
 # BR2_PACKAGE_PCMANFM is not set
@@ -1439,22 +1525,34 @@ BR2_PACKAGE_X11VNC=y
 # xscreensaver needs a toolchain w/ wchar, C++, threads, gcc >= 4.9, OpenGL backend
 #
 BR2_PACKAGE_XTERM=y
-# BR2_PACKAGE_XVKBD is not set
-
-#
-# yad needs libgtk2 or libgtk3 w/ X11 backend
-#
+BR2_PACKAGE_XVKBD=y
+# BR2_PACKAGE_YAD is not set
 
 #
 # X libraries and helper libraries
 #
-# BR2_PACKAGE_XKEYBOARD_CONFIG is not set
+# BR2_PACKAGE_LIBSEXY is not set
+BR2_PACKAGE_XKEYBOARD_CONFIG=y
 
 #
 # X window managers
 #
 # BR2_PACKAGE_FLUXBOX is not set
-# BR2_PACKAGE_MATCHBOX is not set
+BR2_PACKAGE_MATCHBOX=y
+BR2_PACKAGE_MATCHBOX_SM=y
+
+#
+# matchbox utilities
+#
+BR2_PACKAGE_MATCHBOX_COMMON=y
+BR2_PACKAGE_MATCHBOX_COMMON_PDA=y
+BR2_PACKAGE_MATCHBOX_DESKTOP=y
+BR2_PACKAGE_MATCHBOX_FAKEKEY=y
+BR2_PACKAGE_MATCHBOX_KEYBOARD=y
+BR2_PACKAGE_MATCHBOX_LIB=y
+BR2_PACKAGE_MATCHBOX_PANEL=y
+BR2_PACKAGE_MATCHBOX_STARTUP_MONITOR=y
+# BR2_PACKAGE_METACITY is not set
 # BR2_PACKAGE_OPENBOX is not set
 # BR2_PACKAGE_RATPOISON is not set
 
@@ -2303,11 +2401,18 @@ BR2_PACKAGE_LIBLOCKFILE=y
 # BR2_PACKAGE_ASSIMP is not set
 # BR2_PACKAGE_AT_SPI2_ATK is not set
 # BR2_PACKAGE_AT_SPI2_CORE is not set
-# BR2_PACKAGE_ATK is not set
+BR2_PACKAGE_ATK=y
 # BR2_PACKAGE_ATKMM is not set
 # BR2_PACKAGE_BULLET is not set
-# BR2_PACKAGE_CAIRO is not set
-# BR2_PACKAGE_CAIROMM is not set
+BR2_PACKAGE_CAIRO=y
+BR2_PACKAGE_CAIRO_PS=y
+BR2_PACKAGE_CAIRO_PDF=y
+BR2_PACKAGE_CAIRO_PNG=y
+# BR2_PACKAGE_CAIRO_SCRIPT is not set
+BR2_PACKAGE_CAIRO_SVG=y
+# BR2_PACKAGE_CAIRO_TEE is not set
+# BR2_PACKAGE_CAIRO_XML is not set
+BR2_PACKAGE_CAIROMM=y
 
 #
 # chipmunk needs an OpenGL backend
@@ -2329,7 +2434,7 @@ BR2_PACKAGE_GD=y
 # BR2_PACKAGE_GD_PNGTOGD is not set
 # BR2_PACKAGE_GD_PNGTOGD2 is not set
 # BR2_PACKAGE_GD_WEBPNG is not set
-# BR2_PACKAGE_GDK_PIXBUF is not set
+BR2_PACKAGE_GDK_PIXBUF=y
 # BR2_PACKAGE_GDK_PIXBUF_XLIB is not set
 # BR2_PACKAGE_GIBLIB is not set
 BR2_PACKAGE_GIFLIB=y
@@ -2385,6 +2490,7 @@ BR2_PACKAGE_LIBDRM_HAS_ATOMIC=y
 # BR2_PACKAGE_LIBFREEIMAGE is not set
 # BR2_PACKAGE_LIBGDIPLUS is not set
 # BR2_PACKAGE_LIBGEOTIFF is not set
+# BR2_PACKAGE_LIBGLADE is not set
 
 #
 # libglew depends on X.org and needs an OpenGL backend
@@ -2394,7 +2500,8 @@ BR2_PACKAGE_LIBDRM_HAS_ATOMIC=y
 # libglu needs an OpenGL backend
 #
 # BR2_PACKAGE_LIBGTA is not set
-# BR2_PACKAGE_LIBGTK2 is not set
+BR2_PACKAGE_LIBGTK2=y
+BR2_PACKAGE_LIBGTK2_DEMO=y
 
 #
 # libgtk3 needs an OpenGL or an OpenGL-EGL/wayland backend
@@ -2425,10 +2532,7 @@ BR2_PACKAGE_OPENCV3_LIB_FEATURES2D=y
 BR2_PACKAGE_OPENCV3_LIB_FLANN=y
 BR2_PACKAGE_OPENCV3_LIB_HIGHGUI=y
 BR2_PACKAGE_OPENCV3_GUI_NONE=y
-
-#
-# gtk2 support needs libgtk2
-#
+# BR2_PACKAGE_OPENCV3_WITH_GTK is not set
 
 #
 # gtk3 support needs libgtk3
@@ -2474,10 +2578,10 @@ BR2_PACKAGE_OPENCV3_WITH_WEBP=y
 #
 BR2_PACKAGE_OPENCV3_INSTALL_DATA=y
 BR2_PACKAGE_OPENJPEG=y
-# BR2_PACKAGE_PANGO is not set
-# BR2_PACKAGE_PANGOMM is not set
+BR2_PACKAGE_PANGO=y
+BR2_PACKAGE_PANGOMM=y
 # BR2_PACKAGE_PIPEWIRE is not set
-# BR2_PACKAGE_PIXMAN is not set
+BR2_PACKAGE_PIXMAN=y
 # BR2_PACKAGE_POPPLER is not set
 BR2_PACKAGE_TIFF=y
 BR2_PACKAGE_TIFF_CCITT=y
@@ -2559,7 +2663,7 @@ BR2_PACKAGE_LIBNFC_PN532_SPI=y
 BR2_PACKAGE_LIBNFC_PN532_UART=y
 BR2_PACKAGE_LIBNFC_PN53X_USB=y
 BR2_PACKAGE_LIBNFC_EXAMPLES=y
-# BR2_PACKAGE_LIBPCIACCESS is not set
+BR2_PACKAGE_LIBPCIACCESS=y
 # BR2_PACKAGE_LIBPHIDGET is not set
 # BR2_PACKAGE_LIBPRI is not set
 # BR2_PACKAGE_LIBQMI is not set
@@ -2920,7 +3024,7 @@ BR2_PACKAGE_ELL=y
 # BR2_PACKAGE_GCONF is not set
 # BR2_PACKAGE_GFLAGS is not set
 # BR2_PACKAGE_GLI is not set
-# BR2_PACKAGE_GLIBMM is not set
+BR2_PACKAGE_GLIBMM=y
 # BR2_PACKAGE_GLM is not set
 BR2_PACKAGE_GMP=y
 BR2_PACKAGE_GOBJECT_INTROSPECTION_ARCH_SUPPORTS=y
@@ -2989,7 +3093,7 @@ BR2_PACKAGE_LIBPTHREAD_STUBS=y
 BR2_PACKAGE_LIBSECCOMP_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBSECCOMP is not set
 # BR2_PACKAGE_LIBSHDATA is not set
-# BR2_PACKAGE_LIBSIGC is not set
+BR2_PACKAGE_LIBSIGC=y
 BR2_PACKAGE_LIBSIGSEGV_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBSIGSEGV is not set
 # BR2_PACKAGE_LIBSPATIALINDEX is not set
@@ -3035,7 +3139,7 @@ BR2_PACKAGE_PROTOBUF=y
 # BR2_PACKAGE_SHAPELIB is not set
 # BR2_PACKAGE_SKALIBS is not set
 # BR2_PACKAGE_SPHINXBASE is not set
-# BR2_PACKAGE_STARTUP_NOTIFICATION is not set
+BR2_PACKAGE_STARTUP_NOTIFICATION=y
 # BR2_PACKAGE_TBB is not set
 # BR2_PACKAGE_TINYCBOR is not set
 BR2_PACKAGE_TZDATA=y
@@ -3066,7 +3170,7 @@ BR2_PACKAGE_ICU_CUSTOM_DATA_PATH=""
 # BR2_PACKAGE_LIBEDIT is not set
 # BR2_PACKAGE_LIBENCA is not set
 # BR2_PACKAGE_LIBESTR is not set
-# BR2_PACKAGE_LIBFRIBIDI is not set
+BR2_PACKAGE_LIBFRIBIDI=y
 # BR2_PACKAGE_LIBUNISTRING is not set
 # BR2_PACKAGE_LINENOISE is not set
 BR2_PACKAGE_NCURSES=y
@@ -3101,6 +3205,7 @@ BR2_PACKAGE_READLINE=y
 # BR2_PACKAGE_LIBESMTP is not set
 # BR2_PACKAGE_MSMTP is not set
 # BR2_PACKAGE_MUTT is not set
+# BR2_PACKAGE_SYLPHEED is not set
 
 #
 # Miscellaneous
@@ -3865,7 +3970,7 @@ BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_GEN=4
 BR2_TARGET_ROOTFS_EXT2_REV=1
 BR2_TARGET_ROOTFS_EXT2_LABEL="rootfs"
-BR2_TARGET_ROOTFS_EXT2_SIZE="200G"
+BR2_TARGET_ROOTFS_EXT2_SIZE="1G"
 BR2_TARGET_ROOTFS_EXT2_INODES=0
 BR2_TARGET_ROOTFS_EXT2_RESBLKS=5
 BR2_TARGET_ROOTFS_EXT2_MKFS_OPTIONS="-O ^64bit"
