fix "--march" vector extension

--- a/d1-buildroot.config
+++ b/d1-buildroot.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -g6aa72361-dirty Configuration
+# Buildroot -gc07a613d Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -157,21 +157,102 @@ BR2_TOOLCHAIN_EXTERNAL=y
 #
 # Toolchain External Options
 #
-BR2_TOOLCHAIN_EXTERNAL_BOOTLIN=y
-# BR2_TOOLCHAIN_EXTERNAL_CUSTOM is not set
-BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
-# BR2_TOOLCHAIN_EXTERNAL_PREINSTALLED is not set
+BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
+# BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD is not set
+BR2_TOOLCHAIN_EXTERNAL_PREINSTALLED=y
+BR2_TOOLCHAIN_EXTERNAL_PATH="/root/xuantie-gnu-toolchain/.build/install/"
 BR2_TOOLCHAIN_EXTERNAL_GLIBC=y
 BR2_PACKAGE_HAS_TOOLCHAIN_EXTERNAL=y
-BR2_PACKAGE_PROVIDES_TOOLCHAIN_EXTERNAL="toolchain-external-bootlin"
-BR2_TOOLCHAIN_EXTERNAL_PREFIX="$(ARCH)-linux"
+BR2_PACKAGE_PROVIDES_TOOLCHAIN_EXTERNAL="toolchain-external-custom"
+BR2_TOOLCHAIN_EXTERNAL_PREFIX="$(ARCH)-unknown-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_ARCH_SUPPORTS=y
-# BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_RISCV64_LP64D_GLIBC_BLEEDING_EDGE is not set
-BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_RISCV64_LP64D_GLIBC_STABLE=y
-# BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_RISCV64_LP64D_MUSL_BLEEDING_EDGE is not set
-# BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_RISCV64_LP64D_MUSL_STABLE is not set
-# BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_RISCV64_LP64D_UCLIBC_BLEEDING_EDGE is not set
-# BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_RISCV64_LP64D_UCLIBC_STABLE is not set
+BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="$(ARCH)-unknown-linux-gnu"
+# BR2_TOOLCHAIN_EXTERNAL_GCC_12 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_11 is not set
+BR2_TOOLCHAIN_EXTERNAL_GCC_10=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_9 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_8 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_7 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_6 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_5 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_4_9 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_4_8 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_4_7 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_4_6 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_4_5 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_4_4 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_4_3 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_OLD is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_17 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_16 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_15 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_14 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_13 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_12 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_11 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_10 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_9 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_8 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_7 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_6 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_5 is not set
+BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_4=y
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_3 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_2 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_1 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_0 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_20 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_19 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_18 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_17 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_16 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_15 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_14 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_13 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_12 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_11 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_10 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_9 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_8 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_7 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_6 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_5 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_4 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_3 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_2 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_1 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_0 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_19 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_18 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_17 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_16 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_15 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_14 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_13 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_12 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_11 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_10 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_9 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_8 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_7 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_6 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_5 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_4 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_3 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_2 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_1 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_0 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_REALLY_OLD is not set
+# BR2_TOOLCHAIN_EXTERNAL_CUSTOM_UCLIBC is not set
+BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
+# BR2_TOOLCHAIN_EXTERNAL_CUSTOM_MUSL is not set
+BR2_TOOLCHAIN_EXTERNAL_HAS_SSP=y
+BR2_TOOLCHAIN_EXTERNAL_HAS_SSP_STRONG=y
+# BR2_TOOLCHAIN_EXTERNAL_INET_RPC is not set
+BR2_TOOLCHAIN_EXTERNAL_CXX=y
+# BR2_TOOLCHAIN_EXTERNAL_DLANG is not set
+BR2_TOOLCHAIN_EXTERNAL_FORTRAN=y
+BR2_TOOLCHAIN_EXTERNAL_OPENMP=y
 # BR2_TOOLCHAIN_EXTERNAL_GDB_SERVER_COPY is not set
 BR2_PACKAGE_HOST_GDB_ARCH_SUPPORTS=y
 
@@ -202,12 +283,13 @@ BR2_TOOLCHAIN_HAS_THREADS_NPTL=y
 BR2_TOOLCHAIN_HAS_SSP=y
 BR2_TOOLCHAIN_HAS_SSP_STRONG=y
 BR2_TOOLCHAIN_HAS_UCONTEXT=y
+BR2_TOOLCHAIN_HAS_OPENMP=y
 BR2_TOOLCHAIN_SUPPORTS_PIE=y
 # BR2_TOOLCHAIN_GLIBC_GCONV_LIBS_COPY is not set
-BR2_TOOLCHAIN_EXTRA_LIBS="lib64 lib64v"
+BR2_TOOLCHAIN_EXTRA_LIBS="lib64"
 BR2_TOOLCHAIN_HAS_FULL_GETTEXT=y
 BR2_USE_MMU=y
-BR2_TARGET_OPTIMIZATION="-Os -pipe -mcmodel=medany -mabi=lp64d -march=rv64gc"
+BR2_TARGET_OPTIMIZATION="-Os -pipe -mcmodel=medany -mabi=lp64d -march=rv64imafdcv0p7_zfh_xtheadc"
 BR2_TARGET_LDFLAGS=""
 # BR2_ECLIPSE_REGISTER is not set
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_0=y
@@ -350,9 +432,9 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_SVN is not set
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://gitee.com/weidongshan/NezaD1-linuxkernel.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="origin/master"
-BR2_LINUX_KERNEL_VERSION="origin/master"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/TuringKi/d1-linux.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="origin/main"
+BR2_LINUX_KERNEL_VERSION="origin/main"
 BR2_LINUX_KERNEL_PATCH=""
 # BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
 # BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
@@ -954,7 +1036,6 @@ BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 # BR2_PACKAGE_GENEXT2FS is not set
 # BR2_PACKAGE_GENPART is not set
 # BR2_PACKAGE_GENROMFS is not set
-# BR2_PACKAGE_GOCRYPTFS is not set
 # BR2_PACKAGE_IMX_USB_LOADER is not set
 BR2_PACKAGE_MMC_UTILS=y
 BR2_PACKAGE_MTD=y
@@ -1148,7 +1229,6 @@ BR2_PACKAGE_NETSURF_ARCH_SUPPORTS=y
 # stellarium needs Qt5 and an OpenGL provider
 #
 # BR2_PACKAGE_TESSERACT_OCR is not set
-# BR2_PACKAGE_TINIFIER is not set
 
 #
 # Graphic libraries
@@ -1730,9 +1810,6 @@ BR2_PACKAGE_USBUTILS=y
 #
 # BR2_PACKAGE_4TH is not set
 # BR2_PACKAGE_ENSCRIPT is not set
-BR2_PACKAGE_HOST_ERLANG_ARCH_SUPPORTS=y
-BR2_PACKAGE_ERLANG_ARCH_SUPPORTS=y
-# BR2_PACKAGE_ERLANG is not set
 # BR2_PACKAGE_EXECLINE is not set
 # BR2_PACKAGE_FICL is not set
 # BR2_PACKAGE_GUILE is not set
@@ -1743,7 +1820,6 @@ BR2_PACKAGE_ERLANG_ARCH_SUPPORTS=y
 BR2_PACKAGE_PROVIDES_HOST_LUAINTERPRETER="host-lua"
 # BR2_PACKAGE_MICROPYTHON is not set
 # BR2_PACKAGE_MOARVM is not set
-BR2_PACKAGE_HOST_MONO_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_OPENJDK_BIN_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
@@ -3332,7 +3408,6 @@ BR2_PACKAGE_ETHTOOL_PRETTY_PRINT=y
 # BR2_PACKAGE_FAIL2BAN is not set
 # BR2_PACKAGE_FASTD is not set
 # BR2_PACKAGE_FCGIWRAP is not set
-# BR2_PACKAGE_FLANNEL is not set
 # BR2_PACKAGE_FPING is not set
 # BR2_PACKAGE_FREESWITCH is not set
 # BR2_PACKAGE_FRR is not set
@@ -3769,7 +3844,6 @@ BR2_PACKAGE_LOCKFILE_PROGS=y
 # BR2_PACKAGE_TINI is not set
 BR2_PACKAGE_TMUX=y
 # BR2_PACKAGE_TTYD is not set
-# BR2_PACKAGE_WTFUTIL is not set
 # BR2_PACKAGE_XMLSTARLET is not set
 # BR2_PACKAGE_XXHASH is not set
 # BR2_PACKAGE_YTREE is not set
@@ -3785,27 +3859,15 @@ BR2_PACKAGE_ANDROID_TOOLS_ADB=y
 BR2_PACKAGE_ANDROID_TOOLS_ADBD=y
 # BR2_PACKAGE_ATOP is not set
 # BR2_PACKAGE_ATTR is not set
-# BR2_PACKAGE_BALENA_ENGINE is not set
 # BR2_PACKAGE_BUBBLEWRAP is not set
 BR2_PACKAGE_CGROUPFS_MOUNT=y
 # BR2_PACKAGE_CIRCUS is not set
-BR2_PACKAGE_CONTAINERD=y
-BR2_PACKAGE_CONTAINERD_DRIVER_BTRFS=y
 # BR2_PACKAGE_CPULIMIT is not set
 # BR2_PACKAGE_CPULOAD is not set
 BR2_PACKAGE_DAEMON=y
 # BR2_PACKAGE_DC3DD is not set
 # BR2_PACKAGE_DDRESCUE is not set
-BR2_PACKAGE_DOCKER_CLI=y
-BR2_PACKAGE_DOCKER_CLI_STATIC=y
-BR2_PACKAGE_DOCKER_ENGINE=y
-BR2_PACKAGE_DOCKER_ENGINE_EXPERIMENTAL=y
-BR2_PACKAGE_DOCKER_ENGINE_DRIVER_BTRFS=y
-BR2_PACKAGE_DOCKER_ENGINE_DRIVER_DEVICEMAPPER=y
-BR2_PACKAGE_DOCKER_ENGINE_DRIVER_VFS=y
-BR2_PACKAGE_DOCKER_PROXY=y
 # BR2_PACKAGE_EARLYOOM is not set
-# BR2_PACKAGE_EMBIGGEN_DISK is not set
 # BR2_PACKAGE_EMLOG is not set
 # BR2_PACKAGE_FTOP is not set
 # BR2_PACKAGE_GETENT is not set
@@ -3820,9 +3882,7 @@ BR2_PACKAGE_INITSCRIPTS=y
 BR2_PACKAGE_KMOD=y
 # BR2_PACKAGE_LIBOSTREE is not set
 # BR2_PACKAGE_LXC is not set
-# BR2_PACKAGE_MENDER is not set
 # BR2_PACKAGE_MFOC is not set
-# BR2_PACKAGE_MOBY_BUILDKIT is not set
 # BR2_PACKAGE_MONIT is not set
 # BR2_PACKAGE_MULTIPATH_TOOLS is not set
 # BR2_PACKAGE_NCDU is not set
@@ -3839,7 +3899,6 @@ BR2_PACKAGE_KMOD=y
 # BR2_PACKAGE_QUOTA is not set
 # BR2_PACKAGE_QUOTATOOL is not set
 # BR2_PACKAGE_RAUC is not set
-BR2_PACKAGE_RUNC=y
 # BR2_PACKAGE_S6 is not set
 # BR2_PACKAGE_S6_LINUX_INIT is not set
 # BR2_PACKAGE_S6_LINUX_UTILS is not set
@@ -3984,7 +4043,6 @@ BR2_TARGET_ROOTFS_EXT2_NONE=y
 # BR2_TARGET_ROOTFS_F2FS is not set
 # BR2_TARGET_ROOTFS_INITRAMFS is not set
 # BR2_TARGET_ROOTFS_JFFS2 is not set
-# BR2_TARGET_ROOTFS_OCI is not set
 # BR2_TARGET_ROOTFS_ROMFS is not set
 # BR2_TARGET_ROOTFS_SQUASHFS is not set
 BR2_TARGET_ROOTFS_TAR=y
@@ -4004,14 +4062,12 @@ BR2_TARGET_ROOTFS_TAR_OPTIONS=""
 # Bootloaders
 #
 # BR2_TARGET_BAREBOX is not set
-# BR2_TARGET_BEAGLEV_DDRINIT is not set
-# BR2_TARGET_BEAGLEV_SECONDBOOT is not set
 BR2_TARGET_OPENSBI=y
 # BR2_TARGET_OPENSBI_LATEST_VERSION is not set
 # BR2_TARGET_OPENSBI_CUSTOM_VERSION is not set
 # BR2_TARGET_OPENSBI_CUSTOM_TARBALL is not set
 BR2_TARGET_OPENSBI_CUSTOM_GIT=y
-BR2_TARGET_OPENSBI_CUSTOM_REPO_URL="https://gitee.com/weidongshan/NezaD1-opensbi.git"
+BR2_TARGET_OPENSBI_CUSTOM_REPO_URL="git@github.com:TuringKi/d1-opensbi.git"
 BR2_TARGET_OPENSBI_CUSTOM_REPO_VERSION="666fa35305c44340e793a21f7bbfac4528756a5f"
 BR2_TARGET_OPENSBI_VERSION="666fa35305c44340e793a21f7bbfac4528756a5f"
 BR2_TARGET_OPENSBI_PLAT="thead/c910"
@@ -4030,9 +4086,9 @@ BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
 # BR2_TARGET_UBOOT_CUSTOM_HG is not set
 # BR2_TARGET_UBOOT_CUSTOM_SVN is not set
-BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://gitee.com/weidongshan/NezaD1-u-boot-2018.git"
-BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="origin/master"
-BR2_TARGET_UBOOT_VERSION="origin/master"
+BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/TuringKi/d1-uboot.git"
+BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="origin/main"
+BR2_TARGET_UBOOT_VERSION="origin/main"
 BR2_TARGET_UBOOT_PATCH=""
 BR2_TARGET_UBOOT_USE_DEFCONFIG=y
 # BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG is not set
@@ -4082,7 +4138,6 @@ BR2_TARGET_UBOOT_CUSTOM_MAKEOPTS=""
 # BR2_PACKAGE_HOST_CRAMFS is not set
 # BR2_PACKAGE_HOST_CRYPTSETUP is not set
 # BR2_PACKAGE_HOST_DBUS_PYTHON is not set
-# BR2_PACKAGE_HOST_DELVE is not set
 # BR2_PACKAGE_HOST_DFU_UTIL is not set
 # BR2_PACKAGE_HOST_DOS2UNIX is not set
 # BR2_PACKAGE_HOST_DOSFSTOOLS is not set
@@ -4103,10 +4158,6 @@ BR2_PACKAGE_HOST_GENEXT2FS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 # BR2_PACKAGE_HOST_GENPART is not set
 # BR2_PACKAGE_HOST_GNUPG is not set
-BR2_PACKAGE_HOST_GO_TARGET_ARCH_SUPPORTS=y
-BR2_PACKAGE_HOST_GO_TARGET_CGO_LINKING_SUPPORTS=y
-BR2_PACKAGE_HOST_GO_HOST_ARCH_SUPPORTS=y
-BR2_PACKAGE_HOST_GO_BOOTSTRAP_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_GPTFDISK=y
 # BR2_PACKAGE_HOST_IMAGEMAGICK is not set
@@ -4122,7 +4173,6 @@ BR2_PACKAGE_HOST_KMOD=y
 # BR2_PACKAGE_HOST_LPC3250LOADER is not set
 # BR2_PACKAGE_HOST_LTTNG_BABELTRACE is not set
 # BR2_PACKAGE_HOST_LZMA_ALONE is not set
-# BR2_PACKAGE_HOST_MENDER_ARTIFACT is not set
 # BR2_PACKAGE_HOST_MESON_TOOLS is not set
 BR2_PACKAGE_HOST_MKPASSWD=y
 BR2_PACKAGE_HOST_MTD=y
@@ -4160,7 +4210,6 @@ BR2_PACKAGE_HOST_RUSTC_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_RUSTC_ARCH="riscv64gc"
 # BR2_PACKAGE_HOST_RUSTC is not set
 BR2_PACKAGE_PROVIDES_HOST_RUSTC="host-rust-bin"
-# BR2_PACKAGE_HOST_SAM_BA is not set
 # BR2_PACKAGE_HOST_SDBUSPLUS is not set
 # BR2_PACKAGE_HOST_SENTRY_CLI is not set
 # BR2_PACKAGE_HOST_SLOCI_IMAGE is not set
