--- a/board/aw-ol/d1/d1-linux.config
+++ b/board/aw-ol/d1/d1-linux.config
@@ -2292,7 +2292,7 @@ CONFIG_FB=y
 #
 # Video support for sunxi
 #
-# CONFIG_FB_CONSOLE_SUNXI is not set
+CONFIG_FB_CONSOLE_SUNXI=y
 CONFIG_DISP2_SUNXI=y
 CONFIG_SUNXI_DISP2_FB_DISABLE_ROTATE=y
 # CONFIG_SUNXI_DISP2_FB_ROTATION_SUPPORT is not set
@@ -2386,7 +2386,7 @@ CONFIG_VGA_CONSOLE=y
 CONFIG_DUMMY_CONSOLE=y
 CONFIG_DUMMY_CONSOLE_COLUMNS=80
 CONFIG_DUMMY_CONSOLE_ROWS=25
-# CONFIG_FRAMEBUFFER_CONSOLE is not set
+CONFIG_FRAMEBUFFER_CONSOLE=y
 # end of Console display driver support
 
 # CONFIG_LOGO is not set
@@ -2739,11 +2739,9 @@ CONFIG_HID_MULTITOUCH=m
 #
 # USB HID support
 #
-#CONFIG_USB_HID=y
-#CONFIG_HID_PID=y
-CONFIG_USB_KBD=y
-CONFIG_USB_MOUSE=y
-#CONFIG_USB_HIDDEV=y
+CONFIG_USB_HID=y
+CONFIG_HID_PID=y
+CONFIG_USB_HIDDEV=y
 # end of USB HID support
 
 #
