--- a/d1-buildroot.config
+++ b/d1-buildroot.config
@@ -286,7 +286,7 @@ BR2_TOOLCHAIN_HAS_UCONTEXT=y
 BR2_TOOLCHAIN_HAS_OPENMP=y
 BR2_TOOLCHAIN_SUPPORTS_PIE=y
 # BR2_TOOLCHAIN_GLIBC_GCONV_LIBS_COPY is not set
-BR2_TOOLCHAIN_EXTRA_LIBS="lib64"
+BR2_TOOLCHAIN_EXTRA_LIBS="lib64 lib64v0p7_xthead"
 BR2_TOOLCHAIN_HAS_FULL_GETTEXT=y
 BR2_USE_MMU=y
 BR2_TARGET_OPTIMIZATION="-Os -pipe -mcmodel=medany -mabi=lp64d -march=rv64imafdcv0p7_zfh_xtheadc"
